--- a/index.html
+++ b/index.html
@@ -479,7 +479,8 @@ in Reverse Chronological Order</font></h1>
 
 
 <li>
-					<p>Itay Berman and Iftach Haitner and&nbsp; Aris Tentes<br>
+					<p><a href="http://www.cs.tau.ac.il/~itayberm/">Itay Berman</a> and Iftach Haitner and&nbsp; 
+					<a href="http://cs.nyu.edu/~tentes/Homepage.html">Aris Tentes</a><br>
 					<strong>Coin Flipping of Any Constant Bias Implies One-Way 
 					Functions </strong>
 					<span class="style14"><strong><span style="font-weight: 400;">[<a href="javascript:toggle('abstract-TightCT')">Abstract</a><span class="style11">]</span><span dir="LTR" class="style14">&nbsp;<span class="style11"><img height="11" src="new.gif" width="28"></span></span></span></strong><br>
@@ -595,7 +596,7 @@ interactive protocols, and the reconstruction paradigm of <span class="auto-styl
 		
 		  
 		  <li>
-					<p>Itay Berman and Iftach Haitner and&nbsp; Ilan Komargodski 
+					<p><a href="http://www.cs.tau.ac.il/~itayberm/">Itay Berman</a> and Iftach Haitner and&nbsp;<a href="https://sites.google.com/site/ilankomhomepage/"> Ilan Komargodski</a> 
 					and&nbsp; <a href="http://www.wisdom.weizmann.ac.il/~naor/">Moni Naor</a><br>
 					<strong>Hardness Preserving Reductions via Cuckoo Hashing </strong>
 					<span class="style14"><strong><span style="font-weight: 400;">[<a href="javascript:toggle('abstract-Cuckoo')">Abstract</a><span class="style11">]</span><span dir="LTR" class="style14">&nbsp;</span></span></strong><br>
@@ -695,7 +696,10 @@ be black-box reduced to the existence of one-way functions.
 
 
   <li>
-					<p class="auto-style7"><span dir="LTR"><span class="style14">Itay Berman</span></span><span style="font-weight: 400;"><span dir="LTR" class="style14"><span dir="LTR" style="font-weight: 400;">
+					<p class="auto-style7"><span style="font-weight: 400;">
+					<span dir="LTR" class="style14">
+					<span dir="LTR" style="font-weight: 400;">
+					<a href="http://www.cs.tau.ac.il/~itayberm/">Itay Berman</a>
 					and Iftach Haitner</span> </span>
 		  </span><br>
 					<strong>From Non-Adaptive to Adaptive Pseudorandom Functions</strong><span class="style14"><strong><span class="style11">&nbsp;</span><span style="font-weight: 400;"><a href="javascript:toggle('abstract-adaptivePRF')">[Abstrac</a></span></strong><span style="font-weight: 400;"><a href="javascript:toggle('abstract-adaptivePRF')">t<span class="style11">]</span></a></span><br>
@@ -770,8 +774,8 @@ We make progress towards answering the above fundamental question, showing that
 					<span dir="LTR" class="style14">
 		  		    <a href="http://www.cs.nyu.edu/~dodis/">Yevgeniy Dodis</a>, <span dir="LTR" style="font-weight: 400;">
 					Iftach Haitner </span>
-		  and Aris Tentes </span>
-		  </span><br>
+		  and </span>
+		  </span><a href="http://cs.nyu.edu/~tentes/Homepage.html">Aris Tentes</a><br>
 					<span class="style14"><strong>On the Instantiability of 
 					Hash-and-Sign RSA Signatures<span class="style11">&nbsp;</span><span style="font-weight: 400;">[<a href="javascript:toggle('abstract-FDH')">Abstract</a><span class="style11">]</span><span dir="LTR" class="style14">
 					<span class="style11">[</span><a href="papers/FullDomainHash/seminar.pptx">S<span class="style11">lides</span></a>]&nbsp;<br>
