--- a/index.html
+++ b/index.html
@@ -745,7 +745,7 @@ pairwise independent hash function.
 					&nbsp;[<a href="papers/CoinFlipping/Seminar.pptx">Slides</a>]</span></span><span dir="LTR" class="style14">&nbsp;</span></span></strong><br>
 					FOCS 2011 <span style="font-weight: 400;">
 					<span dir="LTR" class="style14">
-					<a href="papers/FullDomainHash/FDH_TCC.pdf">[PDF]</a><a href="papers/FindingCollisions/FindingCollisions.ps"></a></span></span><br><span style="font-weight: 400;"><span dir="LTR" class="style14">Draft of full version
+					<a href="papers/CoinFlipping/FOCS.pptx">[PDF]</a><a href="papers/FindingCollisions/FindingCollisions.ps"></a></span></span><br><span style="font-weight: 400;"><span dir="LTR" class="style14">Draft of full version
 					<a href="papers/CoinFlipping/CoinFlippingtoOWF.pdf">[PDF]</a></span></span></span></p>
 					</li>
 					
@@ -1009,7 +1009,7 @@ our proof of security makes to the KDM query function is <strong>inherent</stron
 					</b></span><br>
 		  		    <span style="font-weight: 400;">
 		  		  <span class="style14"><span dir="LTR" class="style14">Advances in Cryptology - Eurocrypt,
-				2010 <span dir="LTR"><span class="style11">[</span><a href="papers/SampleWithSize/SampleWithSize_CCC.pdf">PDF</a><b>]</b></span></span></span><br>
+				2010 <span dir="LTR"><span class="style11">[</span><a href="papers/RompelRevisted/RompelRevisited-EurocryptCamera.pdf">PDF</a><b>]</b></span></span></span><br>
 		  		  <span class="style14"><span dir="LTR" class="style14">Draft of full version
 					<a href="papers/RompelRevisted/RompelRevisited-eprint.pdf">[PDF]</a><a href="papers/FindingCollisions/FindingCollisions.ps"></a><b><i><o:p></o:p></i></b> </span></span><a href="papers/FindingCollisions/FindingCollisions.ps"></a><b><i><o:p></o:p></i></b>&nbsp;</span></h2>
 		  <span style="font-weight: 400;">
@@ -1157,7 +1157,7 @@ original verifier would.
 		  
 					</li>
 		  <li>
-		  <h2 style="width: 764px"><span dir="LTR" style="font-weight: 400;"><a name="HONRV"></a>Iftach Haitner,
+		  <h2 style="width: 783px"><span dir="LTR" style="font-weight: 400;"><a name="HONRV"></a>Iftach Haitner,
 		  <span dir="LTR">Minh-Huyen Nguyen, Shien Jin Ong</span>, </span>
 		  <span style="font-weight: 400;"><span dir="LTR" class="style14">
 		  <a href="http://www.wisdom.weizmann.ac.il/%7Ereingold">Omer Reingold</a> and 
@@ -1667,7 +1667,7 @@ that the receiver does not learn any additional information on
 		  <a href="papers/OTDenseTDP/OT_Dense_TCC.pdf">[PDF]</a>
 		  <span style="color: blue;"><br>
 		  </span><span class="style5">Draft of full version</span><span style="color: blue;">
-		  <a href="papers/PowerofRO1/MainFile.pdf">[PDF]</a></span></span></span></h2>
+		  <a href="papers/OTDenseTDP/OTDenseTDP.pdf">[PDF]</a></span></span></span></h2>
 
 
 	  </li></ul>
