--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ DIV.Section1 {
 	  
 	 [<a href="javascript:MySwitch('Bio','Info','OtherA','ProActiv')">Short Bio</a>]
 
-	  [<a href="javascript:MySwitch('ProActiv','Info','Bio','OtherA')">Proffestional Activity</a>]
+	  [<a href="javascript:MySwitch('ProActiv','Info','Bio','OtherA')">Professional Activity</a>]
 
      [<a href="javascript:MySwitch('OtherA','Info','Bio','ProActiv')">School 
 	  Activity</a>]
@@ -255,7 +255,7 @@ DIV.Section1 {
 	  Center of Research Excellence in Algorithms (ICORE)</a> and the <a href="http://cpiis.cs.tau.ac.il/">Check Point Institute for Information Security.</a><br>
 
 	  
-	  Untill July 2010, I was a postdoctoral researcher at <a href="http://research.microsoft.com/en-us/labs/newengland/">Microsoft
+	  	Until July 2010, I was a postdoctoral researcher at <a href="http://research.microsoft.com/en-us/labs/newengland/">Microsoft
 	  Research New England</a>. Prior to the time at Microsoft Research, I did a six months postdoc at <a href="http://www.cs.haifa.ac.il/"><font>Department
 		of Computer Science, University of Haifa</font></a>, hosted by <a href="http://cs.haifa.ac.il/%7Eronen/">
 		Ronen shaltiel</a></span><span class="style8" style="">.
@@ -327,7 +327,7 @@ DIV.Section1 {
 	  
 	  <div class="box" id="ProActiv" style="border-style: solid; border-width: 1px; padding: 5px 4px; display: none; background-color: rgb(255, 255, 255);">
      	 
-	  	  <font class="auto-style9">Proffestional Activity</font> <br>
+	  	  <font class="auto-style9">Professional Activity</font> <br>
 	  
  <br>
 	  
@@ -361,7 +361,7 @@ DIV.Section1 {
 	   <br>
 
 
-<font class="auto-style8">Workshop Orginizer</font></span><span class="style18">
+<font class="auto-style8">Workshop Organizer</font></span><span class="style18">
 
 
           <li> <a href="http://intractability2013.workshop.org.il/">Modeling Intractability workshop 2013</a><br></li>
@@ -663,7 +663,7 @@ primitive cannot be used in a black-box way to construct another primitive; in
 their seminal work, <span class="auto-style2">Impagliazzo and Rudich [STOC ’89]</span> 
 showed that no key-agreement protocol exists in the random oracle model, 
 yielding that key-agreement cannot be black-box reduced to one-way functions. 
-Their work has a long line of followup works (<span class="auto-style2">Simon 
+Their work has a long line of follow-up works (<span class="auto-style2">Simon 
 [EC ’98]</span>, <span class="auto-style2">Gertner et al. [STOC ’00]</span> and<span class="auto-style2"> 
 Gennaro et al. [SICOMP ’05]</span>, to name a few), showing that given oracle 
 access to a certain type of function family (e.g., the family that “implements” 
@@ -751,7 +751,7 @@ pairwise independent hash function.
 					
 			<div class="box" id="abstract-CoinFlipping" style="border-style: solid; border-width: 1px; padding: 1px 4px; display: none; background-color: rgb(255, 255, 255);">
 					  <h2><span style="font-weight: 400;"> It is well known (c.f., Impagliazzo and Luby [FOCS &#39;89]) that the existence of 
-almost all ``interesting&quot; cryptographic applications, i,e., ones that cannot 
+almost all ``interesting&quot; cryptographic applications, i.e., ones that cannot 
 hold information theoretically, implies one-way functions. An important exception where the above implication is not 
 known, however, is the case of coin-flipping protocols. Such protocols allow 
 honest parties to mutually flip an unbiased coin, while guaranteeing that even a cheating (efficient) party cannot bias the 
