--- a/index.html
+++ b/index.html
@@ -483,7 +483,8 @@ in Reverse Chronological Order</font></h1>
 					<a href="http://cs.nyu.edu/~tentes/Homepage.html">Aris Tentes</a><br>
 					<strong>Coin Flipping of Any Constant Bias Implies One-Way 
 					Functions </strong>
-					<span class="style14"><strong><span style="font-weight: 400;">[<a href="javascript:toggle('abstract-TightCT')">Abstract</a><span class="style11">]</span><span dir="LTR" class="style14">&nbsp;<span class="style11"><img height="11" src="new.gif" width="28"></span></span></span></strong><br>
+					<span class="style14"><strong><span style="font-weight: 400;">[<a href="javascript:toggle('abstract-TightCT')">Abstract</a><span class="style11">] <span dir="LTR" class="style14">
+					[<a href="papers/TightCF/TightCoinFlipping_full.ppsx">Slides</a>]</span></span><span dir="LTR" class="style14">&nbsp;<span class="style11"><img height="11" src="new.gif" width="28"></span></span></span></strong><br>
 					Manuscript 2013</span></p>
 		  
 		  <div class="box" id="abstract-TightCT" style="border-style: solid; border-width: 1px; padding: 1px 4px; display: none; background-color: rgb(255, 255, 255);"> <style type="text/css">
@@ -703,14 +704,6 @@ be black-box reduced to the existence of one-way functions.
 					and Iftach Haitner</span> </span>
 		  </span><br>
 					<strong>From Non-Adaptive to Adaptive Pseudorandom Functions</strong><span class="style14"><strong><span class="style11">&nbsp;</span><span style="font-weight: 400;"><a href="javascript:toggle('abstract-adaptivePRF')">[Abstrac</a></span></strong><span style="font-weight: 400;"><a href="javascript:toggle('abstract-adaptivePRF')">t<span class="style11">]</span></a></span><br>
-		  <span dir="LTR" style="font-weight: 400"><span class="style5">
-		  <b> <span dir="LTR" class="style14"><span dir="LTR" style="font-weight: 400;">Journal of Cryptology 
-		  <i>  
-		  <span class="style23">2013</span>&nbsp; <span style="color: blue;">
-		  <span class="style23">
-		  		  <a class="style5" href="http://link.springer.com/article/10.1007/s00145-013-9169-2">[link]</a></span>
-		  <o:p></o:p>
-		  </span></i></span></span></b></span></span><br>
 					TCC 2012 <span style="font-weight: 400;">
 					<span dir="LTR" class="style14">
 					<a href="papers/AdaptivePRF/AdaptivePRF_TCC.pdf">[PDF]</a></span></span></span><br><span class="style14"><span style="font-weight: 400;">
@@ -1459,12 +1452,12 @@ Constructions Based on One-way Functions</b></span><br>
 				</span><a href="papers/IneractiveHashing/IneractiveHashing-CCC.ps"></a>
 		  <span class="style11">[</span><a href="papers/IneractiveHashing/IHSeminar_F.ppt">Slides</a><span class="style5">]<br><span class="style14">
 		  <span dir="LTR" style="font-weight: 400">
-		  <b> <span dir="LTR" class="style14"><span dir="LTR" style="font-weight: 400;">J<i><span class="style23">ournal of Cryptology 2013&nbsp; 
-		  </span> <span style="color: blue;">
+		  <b><i> <span dir="LTR" class="style14"><span dir="LTR" style="font-weight: 400;">Journal of Cryptology 
+		  <span class="style23">2013</span>&nbsp; <span style="color: blue;">
 		  <span class="style23">
 		  <a class="style5" href="http://link.springer.com/content/pdf/10.1007/s00145-012-9139-0">[link]</a></span>
 		  <o:p></o:p>
-		  </span></i></span></span></b></span></span></span></span></span><span class="style14"><br>
+		  </span></span></span></i></b></span></span></span></span></span><span class="style14"><br>
 		  IEEE Conference on Computational Complexity&nbsp; (CCC), 2007
 		  <span style="font-weight: 400;"> 
 		  <span style="color: blue;">
