--- a/index.html
+++ b/index.html
@@ -1127,7 +1127,14 @@ long as the verifier is also given a good approximation of the value
 		  Interactive Argument </strong><span class="style11">[</span><a href="javascript:toggle('abstract-ParallelRepetition')">Abstract</a><span class="style11">] 
 		  [</span><a href="papers/ArgumentPR/Seminar.pptx">S<span class="style11">lides</span></a><span class="style11">]
 		  <br><span class="style5">S<span dir="LTR" class="style14">IAM 
-		  Journal of Computing 2013</span></span></span></span></span></b></span><span style="font-weight: 400;"><span dir="LTR" style="font-weight: 400"><b><br></b></span>IEEE Symposium on Foundations of Computer Science 
+		  Journal of Computing 2013
+		  <span dir="LTR" style="font-weight: 400">
+		  <span dir="LTR" style="font-weight: 400;">
+		  <span style="color: blue;">
+		  <a class="style5" href="http://epubs.siam.org/doi/abs/10.1137/100810630">[link]</a><i> 
+		  <o:p></o:p>
+		  </i>
+		  </span></span></span></span></span></span></span></span></b></span><span style="font-weight: 400;"><span dir="LTR" style="font-weight: 400"><b><br></b></span>IEEE Symposium on Foundations of Computer Science 
 		  (FOCS), 2009<br><span style="font-weight: 400;">Draft of full version
 				<a href="papers/ArgumentPR/ArgumentPR.pdf">[PDF]</a><a href="papers/FindingCollisions/FindingCollisions.ps"></a><b><i><o:p></o:p></i></b>
 		  </span></span></h2>
