--- a/index.html
+++ b/index.html
@@ -361,6 +361,10 @@ DIV.Section1 {
 	   <br>
 
 
+ 
+		 
+		 </span>       
+		 
 <font class="auto-style8">Workshop Organizer</font></span><span class="style18">
 
 
@@ -372,8 +376,15 @@ DIV.Section1 {
 		 
 		 </span>                  
 		 
-		 
-		 
+		 <br>
+
+		 <font class="auto-style8">Teaching (outside of TelAviv university)</font></span><span class="style18">
+
+
+          <li> <a href="http://crypto.biu.ac.il/winterschool2014/">4th Bar-Ilan Winter School on Cryptography</a><br></li>
+
+         
+		
 		 
 		 </div></span>
 
@@ -1460,9 +1471,9 @@ Constructions Based on One-way Functions</b></span><br>
 		  <span class="style11">[</span><a href="papers/IneractiveHashing/IHSeminar_F.ppt">Slides</a><span class="style5">]<br><span class="style14">
 		  <span dir="LTR" style="font-weight: 400">
 		  <b><i> <span dir="LTR" class="style14"><span dir="LTR" style="font-weight: 400;">Journal of Cryptology 
-		  <span class="style23">2013</span>&nbsp; <span style="color: blue;">
+		  <span class="style23">2014</span>&nbsp; <span style="color: blue;">
 		  <span class="style23">
-		  <a class="style5" href="http://link.springer.com/content/pdf/10.1007/s00145-012-9139-0">[link]</a></span>
+		  <a class="style5" href="http://link.springer.com/article/10.1007/s00145-012-9139-0">[link]</a></span>
 		  <o:p></o:p>
 		  </span></span></span></i></b></span></span></span></span></span><span class="style14"><br>
 		  IEEE Conference on Computational Complexity&nbsp; (CCC), 2007
