--- a/index.html
+++ b/index.html
@@ -382,6 +382,9 @@ DIV.Section1 {
 
 
           <li> <a href="http://crypto.biu.ac.il/winterschool2014/">4th Bar-Ilan Winter School on Cryptography</a><br></li>
+          <li> <a href="http://blackboxsummerschool.wordpress.com/">School on Black-Box Impossibility Results
+</a><br></li>
+
 
          
 		
