--- a/Courses/FOC/Spring14/schedule.html
+++ b/Courses/FOC/Spring14/schedule.html
@@ -172,7 +172,7 @@ MACs and Signature Schemes&nbsp; [<a href="Slides/MacsAndSignatures_Slides.pdf" 
 <tr>
 <td style="width: 7%">16</td>
 <td style="width: 14%">June 3</td>
-<td class="auto-style3"><strong>No Class</strong></td>
+<td class="auto-style3"><strong>No Class Shavut</strong></td>
 </tr>
 
 <tr>
@@ -183,7 +183,7 @@ MACs and Signature Schemes&nbsp; [<a href="Slides/MacsAndSignatures_Slides.pdf" 
 
 <tr>
 <td style="width: 7%">14</td>
-<td style="width: 14%">July 9&nbsp; </td>
+<td style="width: 14%">July 23 </td>
 <td class="auto-style2"><strong>Exam</strong></td>
 </tr>
 
