--- a/index.html
+++ b/index.html
@@ -757,7 +757,15 @@ pairwise independent hash function.
 		  </span><br>
 					<strong>Coin Flipping with Constant Bias Implies One-Way 
 					Functions</strong><span class="style14"><strong><span class="style11">&nbsp;</span><span style="font-weight: 400;">[<a href="javascript:toggle('abstract-CoinFlipping')">Abstract</a><span class="style11">] <span dir="LTR" class="style14">
-					&nbsp;[<a href="papers/CoinFlipping/Seminar.pptx">Slides</a>]</span></span><span dir="LTR" class="style14">&nbsp;</span></span></strong><br>
+					&nbsp;[<a href="papers/CoinFlipping/Seminar.pptx">Slides</a>]</span></span><span dir="LTR" class="style14">&nbsp;<br> <span dir="LTR">
+					<span class="style5">SIAM 
+		  Journal of Computing 2013
+		  <span dir="LTR" style="font-weight: 400">
+		  <b><span dir="LTR" style="font-weight: 400;"> <span style="color: blue;">
+		  		    <a class="style5" href="http://epubs.siam.org/doi/abs/10.1137/120887631">[link]</a><i> 
+		  <o:p></o:p>
+		  		  </i>
+		  </span></span></b></span></span></span></span></span></strong><br>
 					FOCS 2011 <span style="font-weight: 400;">
 					<span dir="LTR" class="style14">
 					<a href="papers/CoinFlipping/FOCS.pptx">[PDF]</a><a href="papers/FindingCollisions/FindingCollisions.ps"></a></span></span><br><span style="font-weight: 400;"><span dir="LTR" class="style14">Draft of full version
