--- a/Courses/FOC/Spring14/schedule.html
+++ b/Courses/FOC/Spring14/schedule.html
@@ -96,30 +96,29 @@ basic notations and One-Way Functions
 <td style="width: 14%">March. 18</td>
 <td class="auto-style4">
 
-MACs and Signature Schemes&nbsp; [<a href="Slides/MacsAndSignatures_Slides.pdf" target="_blank">Slides</a>] 
-[<a href="Printouts/MacsAndSignatures_HO.pdf" target="_blank">PO</a>]</td>
+MACs and Signature Schemes&nbsp; [<a href="Slides/MacsAndSignatures_s.pdf" target="_blank">Slides</a>] 
+[<a href="Printouts/MacsAndSignatures_h.pdf" target="_blank">PO</a>]</td>
 </tr>
 
 <tr>
 <td style="width: 7%">6</td>
 <td style="width: 14%">March. 25</td>
-<td class="auto-style4">Interactive Proofs and Zero Knowledge [<a href="Slides/InteractiveProofs_Slides.pdf" target="_blank">Slides</a>] 
+<td class="auto-style4">Interactive Proofs and Zero Knowledge [<a href="Slides/InteractiveProofs_s.pdf" target="_blank">Slides</a>] 
 [<a href="Printouts/InteractiveProofs_HO.pdf" target="_blank">PO</a>]</td>
 </tr>
 
 <tr>
 <td style="width: 7%">7</td>
 <td style="width: 14%">April 1</td>
-<td>Commitment Schemes [<a href="Slides/Commitments_Slides.pdf" target="_blank">Slides</a>] 
-[<a href="Printouts/Commitments_HO.pdf" target="_blank">PO</a>] and Zero Knowledge for NP&nbsp;[<a href="Slides/InteractiveProofs_Slides.pdf" target="_blank">Slides</a>] 
+<td>Commitment Schemes [<a href="Slides/Commitments.pdf" target="_blank">Slides</a>] 
+[<a href="Printouts/Commitments_HO.pdf" target="_blank">PO</a>] and Zero Knowledge for NP&nbsp;[<a href="Slides/InteractiveProofs_s.pdf" target="_blank">Slides</a>] 
 [<a href="Printouts/InteractiveProofs_HO.pdf" target="_blank">PO</a>]</td>
 </tr>
 
 <tr>
 <td style="width: 7%">8</td>
 <td style="width: 14%">April 8</td>
-<td class="auto-style4">Non Interactive Zero Knowledge&nbsp;&nbsp;[<a href="Slides/NIZK_Slides.pdf" target="_blank">Slides</a>] 
-[<a href="Printouts/NIZK_PO.pdf" target="_blank">PO</a>] &nbsp;</td>
+<td class="auto-style4">Non Interactive Zero Knowledge&nbsp;</td>
 </tr>
 
 <tr>
@@ -141,8 +140,7 @@ MACs and Signature Schemes&nbsp; [<a href="Slides/MacsAndSignatures_Slides.pdf" 
 <tr>
 <td style="width: 7%">11</td>
 <td style="width: 14%">April&nbsp; 29</td>
-<td>Encryption Schemes &nbsp;[<a href="Slides/Encryption_Slides.pdf" target="_blank">Slides</a>] 
-[<a href="Printouts/Encryption_PO.pdf" target="_blank">PO</a>] &nbsp;&nbsp;</td>
+<td>Encryption Schemes &nbsp;</td>
 </tr>
 
 <tr>
@@ -160,8 +158,7 @@ MACs and Signature Schemes&nbsp; [<a href="Slides/MacsAndSignatures_Slides.pdf" 
 <tr>
 <td style="width: 7%">14</td>
 <td style="width: 14%">May 20</td>
-<td>Secure Computation [<a href="Slides/SecureComp_Slides.pdf" target="_blank">Slides</a>] 
-[<a href="Printouts/SecureComp_PO.pdf" target="_blank">PO</a>] &nbsp;&nbsp;&nbsp;</td>
+<td>Secure Computation </td>
 </tr>
 
 <tr>
