--- a/Courses/FOC/Spring14/schedule.html
+++ b/Courses/FOC/Spring14/schedule.html
@@ -104,15 +104,16 @@ MACs and Signature Schemes&nbsp; [<a href="Slides/MacsAndSignatures_s.pdf" targe
 <td style="width: 7%">6</td>
 <td style="width: 14%">March. 25</td>
 <td class="auto-style4">Interactive Proofs and Zero Knowledge [<a href="Slides/InteractiveProofs_s.pdf" target="_blank">Slides</a>] 
-[<a href="Printouts/InteractiveProofs_HO.pdf" target="_blank">PO</a>]</td>
+[<a href="Printouts/InteractiveProofs_h.pdf" target="_blank">PO</a>]</td>
 </tr>
 
 <tr>
 <td style="width: 7%">7</td>
 <td style="width: 14%">April 1</td>
 <td>Commitment Schemes [<a href="Slides/Commitments.pdf" target="_blank">Slides</a>] 
-[<a href="Printouts/Commitments_HO.pdf" target="_blank">PO</a>] and Zero Knowledge for NP&nbsp;[<a href="Slides/InteractiveProofs_s.pdf" target="_blank">Slides</a>] 
-[<a href="Printouts/InteractiveProofs_HO.pdf" target="_blank">PO</a>]</td>
+[<a href="Printouts/Commitments_h.pdf" target="_blank">PO</a>] and Zero 
+Knowledge for NP [<a href="Slides/InteractiveProofs_s.pdf" target="_blank">Slides</a>] 
+[<a href="Printouts/InteractiveProofs_h.pdf" target="_blank">PO</a>]</td>
 </tr>
 
 <tr>
