--- a/Courses/FOC/Spring14/sets.html
+++ b/Courses/FOC/Spring14/sets.html
@@ -23,7 +23,9 @@
 <h1>Probelm Sets</h1>
 
  <ol>
-<li> <a href="ProblemSets/PS1.pdf">PS1</a>. Due date, March 18</ol>
+<li> <a href="ProblemSets/PS1.pdf">PS1</a>. Due date, March 18<li> 
+	 <a href="ProblemSets/PS2.pdf">PS2</a>. Due date -&nbsp; In class: April 8. 
+	 Via email: April 10.</ol>
 
 
 
