--- a/Courses/FOC/Spring14/schedule.html
+++ b/Courses/FOC/Spring14/schedule.html
@@ -119,7 +119,8 @@ Knowledge for NP [<a href="Slides/InteractiveProofs_s.pdf" target="_blank">Slide
 <tr>
 <td style="width: 7%">8</td>
 <td style="width: 14%">April 8</td>
-<td class="auto-style4">Non Interactive Zero Knowledge&nbsp;</td>
+<td class="auto-style4">Non Interactive Zero Knowledge&nbsp; [<a href="Slides/NIZK_s.pdf" target="_blank">Slides</a>] 
+[<a href="Printouts/NIZK_h.pdf" target="_blank">PO</a>]</td>
 </tr>
 
 <tr>
