--- a/Courses/FOC/Spring14/sets.html
+++ b/Courses/FOC/Spring14/sets.html
@@ -25,7 +25,8 @@
  <ol>
 <li> <a href="ProblemSets/PS1.pdf">PS1</a>. Due date, March 18<li> 
 	 <a href="ProblemSets/PS2.pdf">PS2</a>. Due date -&nbsp; In class: April 8. 
-	 Via email: April 10.</ol>
+	 Via email: April 10.<li> 
+	 <a href="ProblemSets/PS3.pdf">PS3</a>. Due date, April 30</ol>
 
 
 
