--- a/Courses/FOC/Spring14/schedule.html
+++ b/Courses/FOC/Spring14/schedule.html
@@ -142,7 +142,8 @@ Knowledge for NP [<a href="Slides/InteractiveProofs_s.pdf" target="_blank">Slide
 <tr>
 <td style="width: 7%">11</td>
 <td style="width: 14%">April&nbsp; 29</td>
-<td>Encryption Schemes &nbsp;</td>
+<td>Encryption Schemes &nbsp;&nbsp;[<a href="Slides/Encryption_s.pdf" target="_blank">Slides</a>] 
+[<a href="Printouts/Encryption_h.pdf" target="_blank">PO</a>]</td>
 </tr>
 
 <tr>
@@ -181,7 +182,7 @@ Knowledge for NP [<a href="Slides/InteractiveProofs_s.pdf" target="_blank">Slide
 </tr>
 
 <tr>
-<td style="width: 7%">14</td>
+<td style="width: 7%">&nbsp;</td>
 <td style="width: 14%">July 23 </td>
 <td class="auto-style2"><strong>Exam</strong></td>
 </tr>
