--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ DIV.Section1 {
 <div style="text-align: center;">
 
 
-<br><br>
+	b406262<br><br>
     <table id="AutoNumber12" style="width: 71%;" class="style20" align="center" border="0" bordercolor="#111111">
 
   <tbody>
@@ -527,7 +527,8 @@ weak</em> coin-flipping protocols.</p>
 		  
 		  <li>
 					<p>Iftach Haitner and Eliad Tsfadia <br><strong>An 
-					Almost-Optimally Fair Three-Party Coin-Flipping Protocol</strong><span class="style14"><span style="font-weight: 400;"><strong><span dir="LTR" class="style14"><span class="style11"> [<a href="javascript:toggle('abstract-3CT-Q')">Abstract</a>]&nbsp; <img height="11" src="new.gif" width="28"></span></span></strong></span></span><br>
+					Almost-Optimally Fair Three-Party Coin-Flipping Protocol</strong><span class="style14"><span style="font-weight: 400;"><strong><span dir="LTR" class="style14"><span class="style11"> [<a href="javascript:toggle('abstract-3CT-Q')">Abstract</a>]&nbsp; 
+					[<a href="papers/3PartyCF/3Party-full.ppsx">Slides</a>] <img height="11" src="new.gif" width="28"></span></span></strong></span></span><br>
 					<span class="style14">STOC 2014
 					<span style="font-weight: 400;"> <span dir="LTR" class="style14">
 					<a name="HHRSJoint1"></a>
