--- a/Courses/FOC/Spring14/schedule.html
+++ b/Courses/FOC/Spring14/schedule.html
@@ -161,7 +161,8 @@ Knowledge for NP [<a href="Slides/InteractiveProofs_s.pdf" target="_blank">Slide
 <tr>
 <td style="width: 7%">14</td>
 <td style="width: 14%">May 20</td>
-<td>Secure Computation </td>
+<td>Secure Computation [<a href="Slides/SecureComp_s.pdf" target="_blank">Slides</a>] 
+[<a href="Printouts/SecureComp_h.pdf" target="_blank">PO</a>]</td>
 </tr>
 
 <tr>
