--- a/Courses/FOC/Spring14/schedule.html
+++ b/Courses/FOC/Spring14/schedule.html
@@ -180,12 +180,12 @@ Knowledge for NP [<a href="Slides/InteractiveProofs_s.pdf" target="_blank">Slide
 <tr>
 <td style="width: 7%">17</td>
 <td style="width: 14%">June 10</td>
-<td>??</td>
+<td>Black-box Imposibility results</td>
 </tr>
 
 <tr>
 <td style="width: 7%">&nbsp;</td>
-<td style="width: 14%">July 23 </td>
+<td style="width: 14%">June&nbsp; 23 </td>
 <td class="auto-style2"><strong>Exam</strong></td>
 </tr>
 
