--- a/Courses/FOC/Spring14/sets.html
+++ b/Courses/FOC/Spring14/sets.html
@@ -26,7 +26,9 @@
 <li> <a href="ProblemSets/PS1.pdf">PS1</a>. Due date, March 18<li> 
 	 <a href="ProblemSets/PS2.pdf">PS2</a>. Due date -&nbsp; In class: April 8. 
 	 Via email: April 10.<li> 
-	 <a href="ProblemSets/PS3.pdf">PS3</a>. Due date, April 30</ol>
+	 <a href="ProblemSets/PS3.pdf">PS3</a>. Due date, April 30<li> 
+	 <a href="ProblemSets/PS4.pdf">PS4</a>. Due date -&nbsp; In class: Junel 10. 
+	 Via email: June 12.</ol>
 
 
 
