--- a/Courses/FOC/Spring14/schedule.html
+++ b/Courses/FOC/Spring14/schedule.html
@@ -168,7 +168,7 @@ Knowledge for NP [<a href="Slides/InteractiveProofs_s.pdf" target="_blank">Slide
 <tr>
 <td style="width: 7%">15</td>
 <td style="width: 14%">May 27</td>
-<td>Pseudorandom Generators&nbsp; from One-Way Functions [<a href="Slides/PRGfromOWF_s.pdf" target="_blank">Slides1</a>]&nbsp; [<a href="Printouts/PRGfromOWF_h.pdf" target="_blank">PO</a>]</td>
+<td>Pseudorandom Generators&nbsp; from One-Way Functions [<a href="Slides/PRGfromOWF_s.pdf" target="_blank">Slides</a>]&nbsp; [<a href="Printouts/PRGfromOWF_h.pdf" target="_blank">PO</a>]</td>
 </tr>
 <tr>
 <td style="width: 7%">16</td>
@@ -179,7 +179,7 @@ Knowledge for NP [<a href="Slides/InteractiveProofs_s.pdf" target="_blank">Slide
 <tr>
 <td style="width: 7%">17</td>
 <td style="width: 14%">June 10</td>
-<td>Black-box Imposibility results</td>
+<td>Black-box Imposibility results [<a href="Slides/BlackBoxLB_s.pdf" target="_blank">Slides</a>]&nbsp; [<a href="Printouts/BlackBoxLB_h.pdf" target="_blank">PO</a>]</td>
 </tr>
 
 <tr>
