--- a/Courses/Info/Fall14/index.html
+++ b/Courses/Info/Fall14/index.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
 <head>
-  <title>Iftach Haitner - Foundation of Cryptography </title>
+  <title>Iftach Haitner -  Information Theory and Applications to Computer Science </title>
   <SCRIPT LANGUAGE="JavaScript" SRC="Files/course.js"></SCRIPT>
   <link rel="stylesheet" type="text/css" href="Files/course.css">
    <META HTTP-EQUIV="Content-Type" content="text/html; charset=utf-8">
@@ -18,6 +18,12 @@
 
 
 
+  .auto-style2 {
+	color: #FF0000;
+}
+
+
+
   </style>
 </head>
 
@@ -26,25 +32,22 @@
 <div style="text-align : left ; width :900px" >
 <script>document.write(menu)</script>
  <div id=content>
-<p><span class="auto-style1">0368-4162-01, Spring 2014:</span><br />
+<p><span class="auto-style1">0368-4486-01, Fall 2014:</span><br />
 
-<h1>Foundation of Cryptography </h1>
+<h1>Information Theory and Applications to Computer Science</h1>
 
-	 Tuesdays 10:00-13:00, Room: Shriber 007<br /><br />
+	 Tuesdays 10:00-13:00, Room: Kaplun 118<br /><br />
 
 <b>Instructor:</b> <a href="http://www.cs.tau.ac.il/~iftachh" target="_blank">Iftach Haitner</a> | Schreiber 20<br /><br />
 
 <b>Reception:</b> Sundays 9:00-10:00 (please coordinate via email)<br />
 
-<p><b>Abstract:</b> This is a a graduate-level introduction to the theoretical foundations of Cryptography. We'll study the basic cryptographic primitives (e.g., one-way functions and pseudorandom generators) while focusing on formal definitions and rigorous proofs. Some more advanced topics will be also touched upon.       </p>
+<p><b>Abstract:</b> .       </p>
  <b> <br />
 	 <br />
-	 <span class="auto-style1">Announcements</span></b> <br />
+	 <span class="auto-style1">Announcements</span></b> 
 
- 	<br />
-	 <span class="auto-style1">The website of the <strong>Greater Tel-Aviv Area Crypto seminar
-  </strong>(GTACS) can be found 
-  <a href="http://www.cs.tau.ac.il/cseminar/">here</a>.</span></div>
+</div>
 	</div>
 </div>
 </body>
