--- a/index.html
+++ b/index.html
@@ -463,8 +463,8 @@ DIV.Section1 {
 
     <tr>  <td align="left">
  	   <span class="style16" ><b>Teaching </b><br> <span class="auto-style6">
-		<a <font="" href="Courses/Seminars/Pseudorandomness/Fall13.html" size="2">
-		Seminar on Pseudorandomness (Fall 13)</a>,
+		<a <font="" href="http://www.cs.tau.ac.il/~iftachh/Courses/Info/Fall14/index.html" size="2">
+		Applications of Information Theory&nbsp; (Fall 14)</a>,
 		<a <font="" href="http://tau-cm2014.wikidot.com/" size="2">Computational 
 		Model (Spring 14)</a>,
 		<a <font="" href="Courses/FOC/Spring14/index.html" size="2">Foundation 
@@ -726,7 +726,11 @@ be black-box reduced to the existence of one-way functions.
 					<a href="http://www.cs.tau.ac.il/~itayberm/">Itay Berman</a>
 					and Iftach Haitner</span> </span>
 		  </span><br>
-					<strong>From Non-Adaptive to Adaptive Pseudorandom Functions</strong><span class="style14"><strong><span class="style11">&nbsp;</span><span style="font-weight: 400;"><a href="javascript:toggle('abstract-adaptivePRF')">[Abstrac</a></span></strong><span style="font-weight: 400;"><a href="javascript:toggle('abstract-adaptivePRF')">t<span class="style11">]</span></a></span><br>
+					<strong>From Non-Adaptive to Adaptive Pseudorandom Functions</strong><span class="style14"><strong><span class="style11">&nbsp;</span><span style="font-weight: 400;"><a href="javascript:toggle('abstract-adaptivePRF')">[Abstrac</a></span></strong><span style="font-weight: 400;"><a href="javascript:toggle('abstract-adaptivePRF')">t<span class="style11">]</span></a></span><br><span style="font-weight: 400;"> <span dir="LTR" class="style14"><span dir="LTR" style="font-weight: 400;">
+					Journal of Cryptology 2013 <span dir="LTR"><span style="color: blue;"> 
+		  <span class="style5"><span dir="LTR" style="font-weight: 400">
+		  		  <a class="style5" href="http://rd.springer.com/chapter/10.1007/978-3-642-28914-9_20">[link]</a><b><i> </i></b></span></span></span></span></span></span> 
+					</span><br>
 					TCC 2012 <span style="font-weight: 400;">
 					<span dir="LTR" class="style14">
 					<a href="papers/AdaptivePRF/AdaptivePRF_TCC.pdf">[PDF]</a></span></span></span><br><span class="style14"><span style="font-weight: 400;">
