--- a/Courses/Info/Fall14/schedule.html
+++ b/Courses/Info/Fall14/schedule.html
@@ -64,9 +64,10 @@
 <tr>
 <td style="width: 7%">1</td>
 <td style="width: 14%">October 28 </td>
-<td>Introduction; Administrativia and course topics [<a href="Slides/Introduction_admin_S.pdf" target="_blank">Slides</a>] 
-[<a href="Printouts/Introduction_admin_PO.pdf" target="_blank">PO</a>] and <br />
-...</td>
+<td>Introduction: Administrativia and course topics [<a href="Slides/Introduction_admin_s.pdf" target="_blank">Slides</a>] 
+[<a href="Printouts/Introduction_admin_h.pdf" target="_blank">PO</a>] and <br />
+Basic Definitions and Facts [<a href="Slides/Lesson1_s.pdf" target="_blank">Slides</a>] 
+[<a href="Printouts/Lesson1_h.pdf" target="_blank">PO</a>] </td>
 </tr>
 
 <tr>
