--- a/Courses/Info/Fall14/sets.html
+++ b/Courses/Info/Fall14/sets.html
@@ -21,6 +21,9 @@
 <script>document.write(menu)</script>
  <div id=content>
 <h1>Probelm Sets</h1>
+	 <ol>
+		 <li><a href="ProblemSets/PS1.pdf">Problem set 1</a>. Due date Nov 18.</li>
+	 </ol>
 
 
 
