--- a/Courses/Info/Fall14/schedule.html
+++ b/Courses/Info/Fall14/schedule.html
@@ -80,8 +80,8 @@ Basic Definitions and Facts [<a href="Slides/Lesson1_s.pdf" target="_blank">Slid
 <tr>
 <td style="width: 7%">3</td>
 <td style="width: 14%">November 11</td>
-<td>Differential Entropy [<a href="Slides/Lesson3_s.pdf" target="_blank">Slides</a>] 
-[<a href="Printouts/Lesson2_h.pdf" target="_blank">PO</a>] </td>
+<td>Graph Covering, Differential Entropy [<a href="Slides/Lesson3_s.pdf" target="_blank">Slides</a>] 
+[<a href="Printouts/Lesson3_h.pdf" target="_blank">PO</a>] </td>
 </tr>
 
 <tr>
