--- a/Courses/Info/Fall14/schedule.html
+++ b/Courses/Info/Fall14/schedule.html
@@ -87,7 +87,8 @@ Basic Definitions and Facts [<a href="Slides/Lesson1_s.pdf" target="_blank">Slid
 <tr>
 <td style="width: 7%">4</td>
 <td style="width: 14%">November 18</td>
-<td>&nbsp;</td>
+<td>AEP, Data Compression and  Gambling [<a href="Slides/Lesson4_s.pdf" target="_blank">Slides</a>] 
+[<a href="Printouts/Lesson4_h.pdf" target="_blank">PO</a>] </td>
 </tr>
 
 <tr>
