--- a/Courses/Info/Fall14/schedule.html
+++ b/Courses/Info/Fall14/schedule.html
@@ -94,9 +94,8 @@ Basic Definitions and Facts [<a href="Slides/Lesson1_s.pdf" target="_blank">Slid
 <tr>
 <td style="width: 7%">5</td>
 <td style="width: 14%">November 25</td>
-<td class="auto-style4">
-
-&nbsp;</td>
+<td>Channel Capacity and Isoperimetric inequality [<a href="Slides/Lesson5_s.pdf" target="_blank">Slides</a>] 
+[<a href="Printouts/Lesson5_h.pdf" target="_blank">PO</a>] </td>
 </tr>
 
 <tr>
