--- a/Courses/Info/Fall14/schedule.html
+++ b/Courses/Info/Fall14/schedule.html
@@ -101,33 +101,36 @@ Basic Definitions and Facts [<a href="Slides/Lesson1_s.pdf" target="_blank">Slid
 <tr>
 <td style="width: 7%">6</td>
 <td style="width: 14%">December 2</td>
-<td class="auto-style4">&nbsp;</td>
+<td>Counting [<a href="Slides/Lesson6_s.pdf" target="_blank">Slides</a>] 
+[<a href="Printouts/Lesson6_h.pdf" target="_blank">PO</a>] </td>
 </tr>
 
 <tr>
 <td style="width: 7%">7</td>
 <td style="width: 14%">December 9</td>
-<td>&nbsp;</td>
+<td>Relative Entropy [<a href="Slides/Lesson7_s.pdf" target="_blank">Slides</a>] 
+[<a href="Printouts/Lesson7_h.pdf" target="_blank">PO</a>] </td>
 </tr>
 
 <tr>
 <td style="width: 7%">8</td>
 <td style="width: 14%">December 16</td>
-<td class="auto-style4">&nbsp;</td>
+<td>Kolmogorov   Complexity [<a href="Slides/Lesson8_s.pdf" target="_blank">Slides</a>] 
+[<a href="Printouts/Lesson8_h.pdf" target="_blank">PO</a>] </td>
 </tr>
 
 <tr>
 <td style="width: 7%">9</td>
 <td style="width: 14%">December 23</td>
-<td class="auto-style3">
-
-&nbsp;</td>
+<td>Parallel Repetition [<a href="Slides/Lesson9_s.pdf" target="_blank">Slides</a>] 
+[<a href="Printouts/Lesson9_h.pdf" target="_blank">PO</a>] </td>
 </tr>
 
 <tr>
 <td style="width: 7%">10</td>
 <td style="width: 14%">December 30</td>
-<td class="auto-style3">
+<td>Extractors and Hard-Core Predicates [<a href="Slides/Lesson10_s.pdf" target="_blank">Slides</a>] 
+[<a href="Printouts/Lesson10_h.pdf" target="_blank">PO</a>] </td>
 
 &nbsp;</td>
 </tr>
@@ -135,19 +138,23 @@ Basic Definitions and Facts [<a href="Slides/Lesson1_s.pdf" target="_blank">Slid
 <tr>
 <td style="width: 7%">11</td>
 <td style="width: 14%">January&nbsp; 6</td>
-<td>&nbsp;</td>
+<td>Psuedo Entropy and Pseudorandom Generators [<a href="Slides/Lesson11_s.pdf" target="_blank">Slides</a>] 
+[<a href="Printouts/Lesson11_h.pdf" target="_blank">PO</a>] </td>
 </tr>
 
 <tr>
 <td style="width: 7%">12</td>
 <td style="width: 14%">January&nbsp; 13</td>
-<td class="auto-style3">&nbsp;</td>
+<td class="auto-style3">No Class! <a href="http://www.wisdom.weizmann.ac.il/~naor/itcs2015_main.html" target="_blank">ITCS in Weizmann</a></td>
 </tr>
 
 	<tr>
 <td style="width: 7%">13</td>
 <td style="width: 14%">January&nbsp; 20</td>
-<td>&nbsp;</td>
+<td>Accessible Entropy and Statistically Hiding Commitments [<a href="Slides/Lesson12_s.pdf" target="_blank">Slides</a>] 
+[<a href="Printouts/Lesson12_h.pdf" target="_blank">PO</a>] </td>
+</tr>
+
 	</tr>
 
 <tr>
