--- a/Courses/Info/Fall14/readings.html
+++ b/Courses/Info/Fall14/readings.html
@@ -38,11 +38,25 @@
 
 		<b>Books: </b>
 
-		<p><br></p>
+		<li >Thomas M. Cover, Joy A. Thomas .&nbsp; <i>
 
-		<b>Lecture notes: </b>
+			<a href="eu.wiley.com/WileyCDA/WileyTitle/productCd-0471241954.html">Elements of Information Theory</a>. </i><br>
 
-		<p>&nbsp;</p>
+			</li>
+<br>
+		<b>Papers: </b>
+          
+		<li >Jaikumar Radhakrishnan.&nbsp; <i>
+
+			<a href="http://www.tcs.tifr.res.in/~jaikumar/Papers/EntropyAndCounting.pdf">Entropy and Counting</a>. </i><br>
+
+			</li>
+			
+		<li >Thomas Holenstein.&nbsp; <i>
+
+			<a href="theoryofcomputing.org/articles/v005a008/v005a008.pdf">Parallel Repetition: Simplifications and the No-Signaling Case</a>. </i><br>
+
+		</li>	
 
 
 
