--- a/Courses/Info/Fall14/sets.html
+++ b/Courses/Info/Fall14/sets.html
@@ -25,6 +25,8 @@
 		 <li><a href="ProblemSets/PS1.pdf">Problem set 1</a>. Due date November 18.</li>
 		 
 		 <li><a href="ProblemSets/PS2.pdf">Problem set 2</a>. Due date December 2.</li>
+		 
+		  <li><a href="ProblemSets/PS3.pdf">Problem set 3</a>. Due date December 23.</li>
 	 </ol>
 
 
