--- a/Courses/Info/Fall14/schedule.html
+++ b/Courses/Info/Fall14/schedule.html
@@ -115,7 +115,7 @@ Basic Definitions and Facts [<a href="Slides/Lesson1_s.pdf" target="_blank">Slid
 <tr>
 <td style="width: 7%">8</td>
 <td style="width: 14%">December 16</td>
-<td>Kolmogorov   Complexity [<a href="Slides/Lesson8_s.pdf" target="_blank">Slides</a>] 
+<td>Kolmogorov Complexity and Other Entropy Measures [<a href="Slides/Lesson8_s.pdf" target="_blank">Slides</a>] 
 [<a href="Printouts/Lesson8_h.pdf" target="_blank">PO</a>] </td>
 </tr>
 
