--- a/Courses/Info/Fall14/schedule.html
+++ b/Courses/Info/Fall14/schedule.html
@@ -122,7 +122,7 @@ Basic Definitions and Facts [<a href="Slides/Lesson1_s.pdf" target="_blank">Slid
 <tr>
 <td style="width: 7%">9</td>
 <td style="width: 14%">December 23</td>
-<td>Parallel Repetition [<a href="Slides/Lesson9_s.pdf" target="_blank">Slides</a>] 
+<td>Parallel Repetition of Computationally Sound Proofs [<a href="Slides/Lesson9_s.pdf" target="_blank">Slides</a>] 
 [<a href="Printouts/Lesson9_h.pdf" target="_blank">PO</a>] </td>
 </tr>
 
