--- a/Courses/Info/Fall14/sets.html
+++ b/Courses/Info/Fall14/sets.html
@@ -27,6 +27,7 @@
 		 <li><a href="ProblemSets/PS2.pdf">Problem set 2</a>. Due date December 2.</li>
 		 
 		  <li><a href="ProblemSets/PS3.pdf">Problem set 3</a>. Due date December 23.</li>
+		  <li><a href="ProblemSets/PS4.pdf">Problem set 4</a>. Due date January 6.</li>
 	 </ol>
 
 
