--- a/Courses/Info/Fall14/schedule.html
+++ b/Courses/Info/Fall14/schedule.html
@@ -129,7 +129,7 @@ Basic Definitions and Facts [<a href="Slides/Lesson1_s.pdf" target="_blank">Slid
 <tr>
 <td style="width: 7%">10</td>
 <td style="width: 14%">December 30</td>
-<td>HardCore Predicates [<a href="Slides/Lesson10_s.pdf" target="_blank">Slides</a>] 
+<td>Hardcore Predicates [<a href="Slides/Lesson10_s.pdf" target="_blank">Slides</a>] 
 [<a href="Printouts/Lesson10_h.pdf" target="_blank">PO</a>] </td>
 
 &nbsp;</td>
