--- a/Courses/Info/Fall14/sets.html
+++ b/Courses/Info/Fall14/sets.html
@@ -28,6 +28,7 @@
 		 
 		  <li><a href="ProblemSets/PS3.pdf">Problem set 3</a>. Due date December 23.</li>
 		  <li><a href="ProblemSets/PS4.pdf">Problem set 4</a>. Due date January 6.</li>
+		   <li><a href="ProblemSets/PS5.pdf">Problem set 5</a>. Due date January 28.</li>
 	 </ol>
 
 
