--- a/index.html
+++ b/index.html
@@ -328,13 +328,10 @@ Aviv university, P.O.B. 39040, Ramat Aviv, Tel Aviv 69978, Israel </td>
 <table id="AutoNumber12" style="width: 71%;" class="style20" align="center" border="0" bordercolor="#111111">
 <tbody>
 <tr>
-<td align="left"> <span class="style16"><b>Teaching
-&nbsp;</b><br>
-<span class="auto-style6"> <a =""><font ="" href="http://www.cs.tau.ac.il/%7Eiftachh/Courses/Info/Fall14/index.html" size="2"> Applications of Information Theory&nbsp; (Fall
-14)</font></a><font ="" href="http://www.cs.tau.ac.il/%7Eiftachh/Courses/Info/Fall14/index.html" size="2">, <a =""><font ="" href="http://tau-cm2014.wikidot.com/" size="2">Computational
-Model (Spring 14)</font></a><font ="" href="http://tau-cm2014.wikidot.com/" size="2">, <a =""><font ="" href="Courses/FOC/Spring14/index.html" size="2">Foundation
-of Cryptography (Spring 14)</font></a></font></font></span></span><font ="" href="http://www.cs.tau.ac.il/%7Eiftachh/Courses/Info/Fall14/index.html" size="2"><font ="" href="http://tau-cm2014.wikidot.com/" size="2"><font ="" href="Courses/FOC/Spring14/index.html" size="2"><br>
-</font></font></font></td>
+<td align="left"> <span class="style16"><b>Teaching</b><br>
+<span class="auto-style6"> <a href="http://www.cs.tau.ac.il/%7Eiftachh/Courses/Info/Fall14/index.html"> Applications of Information Theory&nbsp; (Fall
+14)</a>, <a href="http://tau-cm2014.wikidot.com/">Computational Model (Spring 14)</a><href="http://tau-cm2014.wikidot.com/">, <a  href="Courses/FOC/Spring14/index.html" >Foundation
+of Cryptography (Spring 14)</a></span></td>
 </tr>
 </tbody>
 </table>
@@ -420,8 +417,10 @@ Reingold</a> and <a href="http://www.wisdom.weizmann.ac.il/%7Egils/">Gil Segev</
 Tight Lower Bounds on the Round Complexity and Communication Complexity
 of Statistically Hiding Commitments </strong>[<a href="javascript:toggle('abstract-FindingCollisionsJoint')">Abstract</a>]
 <br>
-Manuscript 2013 <span class="style14"> <span class="style14" dir="ltr"><a name="HHRSJoint"></a>
-<span class="style11">[</span><a href="papers/FindingCollisions/FindingCollisions_Joint.pdf">PDF</a><strong><span class="style11">]</span></strong></span></span><br>
+SIAM Journal of Computing 2015, to appear.
+<br>
+Draft of full version <span class="style14"> <span class="style14" dir="ltr"><a name="HHRSJoint"></a>
+<span class="style11">[</span><a href="papers/FindingCollisions/FindingCollisions_Joint.pdf">PDF</a><strong><span class="style11">]</span></strong></span></span> <img src="updated.gif" height="12" width="60"><br>
 </span>
 <div class="box" id="abstract-FindingCollisionsJoint" style="border-style: solid; border-width: 1px; padding: 1px 4px; display: none; background-color: rgb(255, 255, 255);">
 <h2><span style="font-weight: 400;">
