--- a/index.html
+++ b/index.html
@@ -329,8 +329,9 @@ Aviv university, P.O.B. 39040, Ramat Aviv, Tel Aviv 69978, Israel </td>
 <tbody>
 <tr>
 <td align="left"> <span class="style16"><b>Teaching</b><br>
-<span class="auto-style6"> <a href="http://www.cs.tau.ac.il/%7Eiftachh/Courses/Info/Fall14/index.html"> Applications of Information Theory&nbsp; (Fall
-14)</a>, <a href="http://tau-cm2014.wikidot.com/">Computational Model (Spring 14)</a><href="http://tau-cm2014.wikidot.com/">, <a  href="Courses/FOC/Spring14/index.html" >Foundation
+<span class="auto-style6"> <a href="http://www.cs.tau.ac.il/%7Eiftachh/Courses/Seminars/AvgHardness/Spring15.html"> Average-Case Hardness (student seminar)&nbsp; (Spring
+15)</a>, <a href="http://www.cs.tau.ac.il/%7Eiftachh/Courses/Info/Fall14/index.html"> Applications of Information Theory&nbsp; (Fall
+14)</a>, <a href="http://tau-cm2014.wikidot.com/">Computational Model (Spring 14)</a><href="http://tau-cm2014.wikidot.com/">,<br> <a  href="Courses/FOC/Spring14/index.html" >Foundation
 of Cryptography (Spring 14)</a></span></td>
 </tr>
 </tbody>
