--- a/Courses/Seminars/AvgHardness/Spring15.html
+++ b/Courses/Seminars/AvgHardness/Spring15.html
@@ -5,7 +5,7 @@
  <style>td{text-align:center;padding:5px} </style>
 </head>
 
-<body lang="EN-US" link="black" vlink="blue",>
+<body style = "padding-left:40px; font-size:120%">
 
 
 <h1><span style="FONT-SIZE: 26pt">Seminar on Average-Case Complexity<br> </span>  <span style="FONT-SIZE: 18pt">Id: 0368-4152-01</span></h1> 
@@ -36,7 +36,6 @@ In addition, the speakers of the week will have to give me a <strong>practice ta
 
 <table>
  <tbody>
-  
  <tr>
     <td> # </td> <td> When </td> <td> Who </td> <td> What </td>     
  </tr>
@@ -46,7 +45,7 @@ In addition, the speakers of the week will have to give me a <strong>practice ta
  </tr>
 
 
-<tr  style= "BACKGROUND: rgb(192,0,0) 0% 50%">
+<tr  style= "BACKGROUND: red">
     <td>  </td> <td> 17/3 </td> <td> ? </td> <td> NO CLASS </td>     
  </tr>
 
